feat(demo): 更新.gitignore文件，移除不必要的文件路径，简化index.html和主模块，注释掉多余的导入，增加自定义辅助栏视图，提升代码可读性和结构清晰度

--- a/demo-npm/index.html
+++ b/demo-npm/index.html
@@ -7,6 +7,5 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="module" src="/src/loader.ts"></script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
