--- a/demo-npm/index.html
+++ b/demo-npm/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>monaco-vscode-api demo</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="module" src="/src/loader.ts"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="flex flex-col h-screen w-screen items-center justify-center">
+      <div id="d8d-ai-editor" style="width: 70vw; height: 70vh;"  ></div>
+    </div>
+    <script>
+      window.d8dAiEditor = {
+        init: (editorMode) => {
+          console.log('d8dAiEditor.init')
+          editorMode.init()
+          editorMode.appendTestModeControls()
+        }
+      }
+    </script> 
+  </body>
 </html>
