feat(demo-npm): 集成密钥存储提供商并重构类型定义
- 在 demo-npm 中集成密钥存储提供商，实现本地存储加密密钥
- 重构类型定义，将 EditorMode 和 D8dAiEditor 接口移至新文件
- 更新全局声明，使 Window 接口包含 D8dAiEditor
- 在 setup.common.ts 中添加 secretStorageProvider 配置

--- a/demo-npm/index.html
+++ b/demo-npm/index.html
@@ -17,7 +17,35 @@
         init: (editorMode) => {
           editorMode.init()
           editorMode.appendTestModeControls()
+        },
+        secretStorageProvider:{
+          get: async (key) => {
+            try {
+              const encrypted = localStorage.getItem(`secret_${key}`);
+              if (!encrypted) return undefined;
+              // 这里应该使用实际的解密逻辑
+              return encrypted; 
+            } catch (error) {
+              console.error('Failed to get secret:', error);
+              throw error;
+            }
+          },
+          set: async (key, value) => {
+            try {
+              // 这里应该使用实际的加密逻辑
+              const encrypted = value;
+              localStorage.setItem(`secret_${key}`, encrypted);
+            } catch (error) {
+              console.error('Failed to set secret:', error);
+              throw error;
+            }
+          },
+          delete: async (key) => {
+            localStorage.removeItem(`secret_${key}`);
+          },
+          type: 'persisted'
         }
+
       }
     </script> 
   </body>
