refactor(demo-npm): 重构远程连接配置和初始化逻辑
- 移除 index.html 中的 loader.ts 脚本引用，改为在 body 结尾添加
- 更新 loader.ts，添加远程连接相关配置
- 重构 setup.common.ts，将远程连接参数改为在 loader.ts 中处理
- 更新 setup.views.ts，使用新配置进行初始化
- 在 types.ts 中添加 D8dAiEditor 接口的远程连接相关字段

--- a/demo-npm/index.html
+++ b/demo-npm/index.html
@@ -6,7 +6,6 @@
     <title>monaco-vscode-api demo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <script type="module" src="/src/loader.ts"></script>
   </head>
   <body>
     <div class="flex flex-col h-screen w-screen items-center justify-center">
@@ -44,9 +43,13 @@
             localStorage.removeItem(`secret_${key}`);
           },
           type: 'persisted'
-        }
+        },
+        remoteAuthority: '23964.dev.d8d.fun',
+        connectionToken: 'your-token',
+        remotePath: '/docker/codeserver/project/test/d8d-ai-blank-templates/admin-mobile-starter/'
 
       }
     </script> 
+    <script type="module" src="/src/loader.ts"></script>
   </body>
 </html>
